Created Waves Slice and Store. Wrapped app with provider

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,12 @@
     "baseUrl": "./",
     "outDir": "./dist",
     "paths": {
+      "@app/*": [
+        "src/app/*"
+      ],
+      "@features/*": [
+        "src/features/*"
+      ],
       "@components/*": [
         "src/components/*"
       ],
