--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
+    "react-redux": "^9.1.0",
     "highcharts": "^12.1.2",
     "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
