--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
-    "react-redux": "^9.1.0",
+    "@tailwindcss/vite": "^4.0.3",
     "highcharts": "^12.1.2",
     "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -30,6 +31,8 @@
     "prettier": "3.4.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.14"
+    "vite": "^5.4.14",
+    "vite-tsconfig-paths": "^5.1.4",
+    "tailwindcss": "^4.0.3"
   }
 }
