--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,7 +18,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "paths": {      "@components/*": [
+      "./src/components/*"
+    ]}
   },
   "include": ["vite.config.ts"]
 }
